--- a/app/src/main/res/layout/activity_goods.xml
+++ b/app/src/main/res/layout/activity_goods.xml
@@ -20,13 +20,19 @@
             <RelativeLayout
                 android:layout_width="match_parent"
                 android:layout_height="350dp"
-                android:id="@+id/rl_zoom">
+                android:id="@+id/rl_zoom"
+                >
                 <ImageView
                     android:id="@+id/iv_zoom"
                     android:layout_width="match_parent"
                     android:layout_height="match_parent"
-                    android:scaleType="centerCrop"
+                    android:scaleType="fitXY"
                     android:src="@drawable/x"/>
+                <ImageView
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent"
+                    android:scaleType="centerCrop"
+                    android:src="@drawable/tuyiying_"/>
                 <TextView
                     android:id="@+id/tv_title"
                     android:layout_width="wrap_content"
@@ -233,7 +239,7 @@
                     android:text="选择其他编号"
                     android:textSize="@dimen/sp_15"
                     android:textColor="@color/green_06A366"
-                    android:layout_marginLeft="46dp"
+                    android:layout_marginLeft="30dp"
                     android:layout_toRightOf="@+id/tv_price"
                     android:layout_centerVertical="true"/>
             </RelativeLayout>
