--- a/app/src/main/res/layout/activity_pay_succeeful.xml
+++ b/app/src/main/res/layout/activity_pay_succeeful.xml
@@ -5,7 +5,8 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context=".ui.home.activity.PaySucceefulActivity"
-    android:orientation="vertical">
+    android:orientation="vertical"
+    android:background="@color/white_default">
     <include layout="@layout/item_title" />
     <ImageView
         android:layout_width="wrap_content"
