--- a/app/src/main/res/layout/activity_result_goods.xml
+++ b/app/src/main/res/layout/activity_result_goods.xml
@@ -4,15 +4,23 @@
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:background="@color/white_default"
-    android:orientation="vertical"
-    >
+    android:orientation="vertical">
+    <include layout="@layout/item_loading"
+        android:id="@+id/loading" />
     <ImageView
         android:id="@+id/iv_back"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:src="@drawable/global_btn_return"
-        android:padding="16dp"
-        />
+        android:padding="16dp"/>
+    <android.support.v4.widget.NestedScrollView
+        android:layout_width="match_parent"
+        android:layout_height="match_parent">
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:orientation="vertical">
+
 
     <TextView
         android:id="@+id/tv_head"
@@ -23,20 +31,8 @@
         android:textColor="@color/text_black"
         android:layout_marginLeft="16dp"
         />
-
-<android.support.v4.widget.SwipeRefreshLayout
-    android:layout_width="match_parent"
-    android:layout_height="wrap_content"
-    android:paddingLeft="16dp"
-    android:paddingRight="16dp"
-    android:paddingTop="16dp">
-    <LinearLayout
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:orientation="vertical">
-
-
      <android.support.v7.widget.CardView
+         android:id="@+id/cardView"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:background="@color/white_default"
@@ -54,6 +50,23 @@
         android:paddingTop="14dp"
        />
      </android.support.v7.widget.CardView>
-    </LinearLayout>
-</android.support.v4.widget.SwipeRefreshLayout>
+    <TextView
+        android:id="@+id/tv_live"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="关于“翠绿”的直播"
+        android:textSize="@dimen/sp_15"
+        android:textColor="@color/green_06A366"
+        android:layout_marginLeft="@dimen/dp_13"
+        android:layout_marginTop="20dp"
+        android:layout_marginBottom="@dimen/dp_15"/>
+    <android.support.v7.widget.RecyclerView
+        android:id="@+id/rv_live"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:paddingLeft="14dp"
+        android:paddingTop="14dp"
+        />
+        </LinearLayout>
+    </android.support.v4.widget.NestedScrollView>
 </LinearLayout>
