--- a/app/src/main/res/layout/fragment_allorder.xml
+++ b/app/src/main/res/layout/fragment_allorder.xml
@@ -6,14 +6,27 @@
     android:orientation="vertical">
     <include layout="@layout/item_loading"
         android:id="@+id/loading"/>
-
-            <android.support.v7.widget.RecyclerView
-                android:id="@+id/recyclerView"
+            <RelativeLayout
                 android:layout_width="match_parent"
-                android:layout_height="match_parent"
-                android:layout_marginLeft="@dimen/dp_13"
-                android:layout_marginRight="@dimen/dp_13"
-                 />
+                android:layout_height="match_parent">
+                <TextView
+                    android:id="@+id/tv_tishi"
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent"
+                    android:text="暂无数据"
+                    android:textSize="22sp"
+                    android:textColor="@color/black_0B0827"
+                    android:visibility="gone"
+                    android:gravity="center"/>
+                <android.support.v7.widget.RecyclerView
+                    android:id="@+id/recyclerView"
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent"
+                    android:layout_marginLeft="@dimen/dp_13"
+                    android:layout_marginRight="@dimen/dp_13"
+                    />
+
+            </RelativeLayout>
 
 
 </LinearLayout>
