--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -3,28 +3,22 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="match_parent">
+    <include layout="@layout/fragment_tool_bar"
+        android:id="@+id/ic_title"/>
     <android.support.v4.widget.SwipeRefreshLayout
+        android:layout_below="@+id/ic_title"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:background="@color/white_default"
         android:id="@+id/swipeRefreshLayout">
     <android.support.v4.widget.NestedScrollView
+        android:id="@+id/scrollView"
         android:layout_width="match_parent"
         android:layout_height="match_parent">
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:orientation="vertical">
-
-                <de.hdodenhof.circleimageview.CircleImageView
-                    android:id="@+id/iv_head"
-                    android:layout_width="34dp"
-                    android:layout_height="34dp"
-                    android:layout_gravity="right"
-                    android:layout_marginTop="15dp"
-                    android:layout_marginRight="20dp"
-                    android:src="@drawable/img_head_n" />
-
                 <TextView
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
@@ -33,100 +27,109 @@
                     android:textSize="24sp"
                     android:layout_marginLeft="@dimen/dp_15"
                     />
+             <com.bigkoo.convenientbanner.ConvenientBanner
+                 android:layout_marginTop="20dp"
+                 android:id="@+id/cb_home_top"
+                 android:layout_width="match_parent"
+                 android:layout_height="160dp"
+                 app:canLoop="true"
 
-                <android.support.v4.view.ViewPager
-                    android:id="@+id/viewPager"
-                    android:layout_width="match_parent"
-                    android:layout_marginTop="20dp"
-                    android:layout_height="160dp"
-                    android:clipToPadding="false"
-                    android:paddingEnd="36dp"
-                    android:paddingLeft="36dp"
-                    android:paddingRight="36dp"
-                    android:paddingStart="36dp">
-                </android.support.v4.view.ViewPager>
-            <LinearLayout
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:orientation="horizontal"
-                android:layout_marginTop="27dp"
                 >
-                <android.support.design.widget.TabLayout
-                    android:id="@+id/slidingTabLayout"
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:layout_weight="1"
-                    app:tabSelectedTextColor="@color/green_06A366"
-                    app:tabTextColor="@color/text_black"
-                    app:tl_textsize="15sp"/>
+             </com.bigkoo.convenientbanner.ConvenientBanner>
 
-                <TextView
-                    android:id="@+id/tv_filtrate"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_gravity="center_vertical"
-                    android:drawablePadding="4dp"
-                    android:drawableRight="@drawable/btn_down_n"
-                    android:text="筛选"
-                    android:textColor="@color/colorMain"
-                    android:textSize="12sp" />
-            </LinearLayout>
-
-            <LinearLayout
-                android:id="@+id/ll_filtrate"
+            <!-- <android.support.v4.view.ViewPager
+                android:id="@+id/viewPager"
                 android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_marginTop="15dp"
-                android:layout_marginLeft="15dp"
-                android:visibility="gone"
-                android:layout_marginBottom="@dimen/dp_10"
-                >
+                android:layout_marginTop="20dp"
+                android:layout_height="160dp"
+                android:clipToPadding="false"
+                android:paddingEnd="36dp"
+                android:paddingLeft="36dp"
+                android:paddingRight="36dp"
+                android:paddingStart="36dp">
+            </android.support.v4.view.ViewPager>-->
+       <LinearLayout
+           android:layout_width="match_parent"
+           android:layout_height="wrap_content"
+           android:orientation="horizontal"
+           android:layout_marginTop="27dp"
+           >
+           <android.support.design.widget.TabLayout
+               android:id="@+id/slidingTabLayout"
+               android:layout_width="match_parent"
+               android:layout_height="wrap_content"
+               android:layout_weight="1"
+               app:tabSelectedTextColor="@color/green_06A366"
+               app:tabTextColor="@color/text_black"
+               app:tl_textsize="15sp"/>
 
-                <TextView
-                    android:id="@+id/tv_price"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:text="价格"
-                    android:textColor="@color/text_black"
-                    android:textSize="@dimen/sp_12" />
+           <TextView
+               android:id="@+id/tv_filtrate"
+               android:layout_width="wrap_content"
+               android:layout_height="wrap_content"
+               android:layout_gravity="center_vertical"
+               android:drawablePadding="4dp"
+               android:drawableRight="@drawable/btn_down_n"
+               android:text="筛选"
+               android:textColor="@color/colorMain"
+               android:textSize="12sp" />
+       </LinearLayout>
 
-                <TextView
-                    android:id="@+id/tv_hot"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_marginLeft="20dp"
-                    android:text="热度"
-                    android:textColor="@color/text_black"
-                    android:textSize="@dimen/sp_12" />
+       <LinearLayout
+           android:id="@+id/ll_filtrate"
+           android:layout_width="match_parent"
+           android:layout_height="wrap_content"
+           android:layout_marginTop="15dp"
+           android:layout_marginLeft="15dp"
+           android:visibility="gone"
+           android:layout_marginBottom="@dimen/dp_10"
+           >
 
-                <TextView
-                    android:id="@+id/tv_newest"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_marginLeft="20dp"
-                    android:text="最新"
-                    android:textColor="@color/text_black"
-                    android:textSize="@dimen/sp_12" />
-            </LinearLayout>
+           <TextView
+               android:id="@+id/tv_price"
+               android:layout_width="wrap_content"
+               android:layout_height="wrap_content"
+               android:text="价格"
+               android:textColor="@color/text_black"
+               android:textSize="@dimen/sp_12" />
+
+           <TextView
+               android:id="@+id/tv_hot"
+               android:layout_width="wrap_content"
+               android:layout_height="wrap_content"
+               android:layout_marginLeft="20dp"
+               android:text="热度"
+               android:textColor="@color/text_black"
+               android:textSize="@dimen/sp_12" />
+
+           <TextView
+               android:id="@+id/tv_newest"
+               android:layout_width="wrap_content"
+               android:layout_height="wrap_content"
+               android:layout_marginLeft="20dp"
+               android:text="最新"
+               android:textColor="@color/text_black"
+               android:textSize="@dimen/sp_12" />
+       </LinearLayout>
 
 
-                    <android.support.v7.widget.CardView
-                        android:layout_width="match_parent"
-                        android:layout_height="wrap_content"
-                        android:background="@color/white_default"
-                        app:cardCornerRadius="15dp"
-                        app:cardUseCompatPadding="true"
-                        android:descendantFocusability="blocksDescendants"
-                        android:layout_margin="@dimen/dp_13">
-                        <android.support.v7.widget.RecyclerView
-                            android:overScrollMode="never"
-                            android:id="@+id/recyclerView"
-                            android:layout_width="match_parent"
-                            android:layout_height="wrap_content"
-                            android:paddingLeft="14dp"
-                            android:paddingTop="14dp"/>
-                    </android.support.v7.widget.CardView>
-        </LinearLayout>
-    </android.support.v4.widget.NestedScrollView>
-    </android.support.v4.widget.SwipeRefreshLayout>
+               <android.support.v7.widget.CardView
+                   android:layout_width="match_parent"
+                   android:layout_height="wrap_content"
+                   android:background="@color/white_default"
+                   app:cardCornerRadius="15dp"
+                   app:cardUseCompatPadding="true"
+                   android:descendantFocusability="blocksDescendants"
+                   android:layout_margin="@dimen/dp_13">
+                   <android.support.v7.widget.RecyclerView
+                       android:overScrollMode="never"
+                       android:id="@+id/recyclerView"
+                       android:layout_width="match_parent"
+                       android:layout_height="wrap_content"
+                       android:paddingLeft="14dp"
+                       android:paddingTop="14dp"/>
+               </android.support.v7.widget.CardView>
+   </LinearLayout>
+</android.support.v4.widget.NestedScrollView>
+</android.support.v4.widget.SwipeRefreshLayout>
 </RelativeLayout>
