--- a/app/src/main/res/layout/fragment_search.xml
+++ b/app/src/main/res/layout/fragment_search.xml
@@ -27,6 +27,7 @@
                 android:textColor="@color/text_black"
                 android:textSize="@dimen/sp_17"
                 android:text="搜索"
+                android:layout_marginLeft="@dimen/sp_15"
                 android:layout_centerInParent="true"/>
 
     <EditText
