--- a/app/src/main/res/layout/item_allorder.xml
+++ b/app/src/main/res/layout/item_allorder.xml
@@ -7,26 +7,33 @@
     android:background="@color/white_default"
     android:layout_marginTop="@dimen/dp_13">
     <android.support.v7.widget.CardView
-        android:id="@+id/cardView"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         app:cardCornerRadius="5dp">
     <RelativeLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content">
+        <android.support.v7.widget.CardView
+            android:layout_marginTop="@dimen/dp_10"
+            android:layout_marginLeft="15dp"
+            android:id="@+id/cardView"
+            android:layout_width="90dp"
+            android:layout_height="90dp"
+            app:cardCornerRadius="5dp"
+            >
         <ImageView
             android:id="@+id/iv_goodsImage"
-            android:layout_marginLeft="15dp"
-            android:layout_marginTop="@dimen/dp_10"
-            android:layout_width="113dp"
-            android:layout_height="84dp"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
             android:src="@drawable/ic_img_default"
             android:scaleType="fitXY" />
-    <LinearLayout
+        </android.support.v7.widget.CardView>
+
+        <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginLeft="15dp"
-        android:layout_toRightOf="@+id/iv_goodsImage"
+        android:layout_toRightOf="@+id/cardView"
         android:layout_marginTop="@dimen/dp_10"
         android:orientation="vertical">
         <TextView
@@ -60,7 +67,7 @@
             android:layout_width="match_parent"
             android:layout_height="0.5dp"
             android:background="@color/line_C8C7CC"
-            android:layout_below="@+id/iv_goodsImage"
+            android:layout_below="@+id/cardView"
             android:layout_marginTop="10dp"/>
         <RelativeLayout
             android:layout_width="match_parent"
