--- a/app/src/main/res/layout/item_live_recommend.xml
+++ b/app/src/main/res/layout/item_live_recommend.xml
@@ -48,7 +48,5 @@
         android:src="@drawable/global_btn_right"
         android:layout_alignParentRight="true"
         android:layout_centerVertical="true"
-        android:layout_marginRight="13dp"
-
-        />
+        android:layout_marginRight="13dp" />
 </RelativeLayout>
