--- a/app/src/main/res/layout/activity_live_details.xml
+++ b/app/src/main/res/layout/activity_live_details.xml
@@ -6,6 +6,8 @@
     android:background="@color/white_default"
     android:orientation="vertical"
     >
+    <include layout="@layout/item_loading"
+        android:id="@+id/loading"/>
 <include layout="@layout/layout_tool_bar"/>
     <RelativeLayout
         android:layout_width="match_parent"
