--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -6,8 +6,14 @@
         <item name="colorPrimary">@android:color/white</item>
         <item name="colorPrimaryDark">@android:color/white</item>
         <item name="colorAccent">@color/colorMain</item>
-
     </style>
+    <style name="MainTheme" parent="AppTheme">
+        <item name="android:windowNoTitle">true</item>
+        <item name="android:windowFullscreen">true</item>
+        <item name="android:windowBackground">@color/colorTransparent</item>
+        <item name="android:background">@drawable/start</item>
+    </style>
+
     <!--灰色横线样式-->
     <style name="LineGray">
         <item name="android:layout_width">match_parent</item>
