--- a/app/src/main/res/layout/activity_edit_address.xml
+++ b/app/src/main/res/layout/activity_edit_address.xml
@@ -29,7 +29,7 @@
             android:textSize="@dimen/sp_15"
             android:textColor="@color/black_333333"
             android:textColorHint="#BBBBBB"
-            android:hint="请输入收货人昵称"
+            android:hint="请输入收货人"
             android:layout_marginLeft="@dimen/dp_13"
             android:background="@null"/>
         <View
