--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -18,4 +18,5 @@
     <color name="white_default">#FFFFFF</color>
     <color name="gray_EFEFF4">#EFEFF4</color>
     <color name="color3078EF">#3078EF</color>
+    <color name="colorTransparent">#00000000</color>
 </resources>
