--- a/app/src/main/res/layout/activity_my_appointment.xml
+++ b/app/src/main/res/layout/activity_my_appointment.xml
@@ -6,14 +6,39 @@
     android:background="@color/white_default"
     android:orientation="vertical">
     <include layout="@layout/item_title"/>
-        <android.support.v4.widget.SwipeRefreshLayout
-            android:layout_width="match_parent"
-            android:layout_height="match_parent">
-            <android.support.v7.widget.RecyclerView
-                android:id="@+id/recyclerView"
-                android:layout_width="match_parent"
-                android:layout_height="match_parent"
-                android:paddingBottom="14dp" />
-        </android.support.v4.widget.SwipeRefreshLayout>
+    <include layout="@layout/item_loading"
+        android:id="@+id/loading"/>
+    <TextView
+        android:id="@+id/tv_tishi"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:text="暂无数据"
+        android:textSize="@dimen/sp_17"
+        android:textColor="@color/black_666666"
+        android:gravity="center"
+        android:visibility="gone"
+        />
 
+    <android.support.v4.widget.NestedScrollView
+        android:layout_width="match_parent"
+        android:layout_height="match_parent">
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:orientation="vertical">
+
+
+    <android.support.v7.widget.RecyclerView
+        android:id="@+id/recyclerView_one"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:paddingBottom="14dp" />
+
+            <android.support.v7.widget.RecyclerView
+                android:id="@+id/recyclerView_two"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:paddingBottom="14dp" />
+        </LinearLayout>
+    </android.support.v4.widget.NestedScrollView>
 </LinearLayout>
