--- a/app/src/main/res/layout/fragment_allorder.xml
+++ b/app/src/main/res/layout/fragment_allorder.xml
@@ -14,8 +14,8 @@
                     android:layout_width="match_parent"
                     android:layout_height="match_parent"
                     android:text="暂无数据"
-                    android:textSize="22sp"
-                    android:textColor="@color/black_0B0827"
+                    android:textSize="@dimen/sp_17"
+                    android:textColor="@color/black_666666"
                     android:visibility="gone"
                     android:gravity="center"/>
                 <android.support.v7.widget.RecyclerView
