--- a/app/src/main/res/layout/fragment_live.xml
+++ b/app/src/main/res/layout/fragment_live.xml
@@ -46,13 +46,30 @@
                 android:layout_marginTop="37dp"
                 android:layout_marginLeft="13dp"
                 />
+            <RelativeLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content">
+
             <android.support.v7.widget.RecyclerView
                 android:id="@+id/rv_hotLive"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_marginTop="24dp"
-                android:layout_marginLeft="13dp"
-                />
+                android:layout_marginLeft="13dp"/>
+                <TextView
+                    android:id="@+id/tv_tishi"
+                    android:layout_width="wrap_content"
+                    android:layout_height="150dp"
+                    android:text="暂无数据"
+                    android:textSize="@dimen/sp_17"
+                    android:textColor="@color/black_666666"
+                    android:layout_centerInParent="true"
+                    android:gravity="center"
+                    android:visibility="gone"
+                    />
+
+            </RelativeLayout>
+
             <TextView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
@@ -63,14 +80,27 @@
                 android:layout_marginLeft="13dp"
 
                 />
+            <RelativeLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content">
             <android.support.v7.widget.RecyclerView
                 android:id="@+id/rv_reviewLive"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_marginTop="24dp"
-                android:layout_marginLeft="13dp"
-
+                android:layout_marginLeft="13dp" />
+            <TextView
+                android:id="@+id/tv_tishi_two"
+                android:layout_width="wrap_content"
+                android:layout_height="150dp"
+                android:text="暂无数据"
+                android:textSize="@dimen/sp_17"
+                android:textColor="@color/black_666666"
+                android:layout_centerInParent="true"
+                android:gravity="center"
+                android:visibility="gone"
                 />
+            </RelativeLayout>
             <TextView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
@@ -78,9 +108,11 @@
                 android:textSize="@dimen/sp_14"
                 android:textColor="@color/text_black"
                 android:layout_marginTop="40dp"
-                android:layout_marginLeft="13dp"
+                android:layout_marginLeft="13dp" />
+            <RelativeLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content">
 
-                />
             <android.support.v7.widget.RecyclerView
                 android:id="@+id/rv_recommendLive"
                 android:layout_width="match_parent"
@@ -88,8 +120,19 @@
                 android:layout_marginTop="22dp"
                 android:layout_marginBottom="36dp"
                 android:layout_marginLeft="13dp"
-                android:minHeight="5dp"
-                />
+                android:minHeight="5dp" />
+                <TextView
+                    android:id="@+id/tv_tishi_three"
+                    android:layout_width="wrap_content"
+                    android:layout_height="150dp"
+                    android:text="暂无数据"
+                    android:textSize="@dimen/sp_17"
+                    android:textColor="@color/black_666666"
+                    android:layout_centerInParent="true"
+                    android:gravity="center"
+                    android:visibility="gone" />
+            </RelativeLayout>
+
         </LinearLayout>
     </android.support.v4.widget.NestedScrollView>
 </LinearLayout>
