--- a/app/src/main/res/layout/fragment_shoppingcar.xml
+++ b/app/src/main/res/layout/fragment_shoppingcar.xml
@@ -4,7 +4,7 @@
     android:layout_height="match_parent"
     android:background="@color/white_default"
     >
-    <include
+   <include
         layout="@layout/fragment_tool_bar"
         android:id="@+id/il_title"/>
     <android.support.v4.widget.NestedScrollView
@@ -107,7 +107,18 @@
             android:background="@drawable/bg_sure"
             android:layout_alignParentRight="true"/>
     </RelativeLayout>
-    <include layout="@layout/item_loading"
+    <TextView
+        android:id="@+id/tv_tishi"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="暂无数据"
+        android:textSize="@dimen/sp_17"
+        android:textColor="@color/black_666666"
+        android:layout_centerInParent="true"
+        android:visibility="gone"
+        />
+
+     <include layout="@layout/item_loading"
         android:id="@+id/loading"/>
     <include layout="@layout/item_login"
         android:id="@+id/view_login"/>
