--- a/app/src/main/res/layout/item_myappointment.xml
+++ b/app/src/main/res/layout/item_myappointment.xml
@@ -4,6 +4,7 @@
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:orientation="vertical">
+
     <RelativeLayout
         android:id="@+id/ll_start"
         android:layout_width="match_parent"
@@ -14,10 +15,11 @@
             android:layout_height="wrap_content"
             android:textSize="@dimen/sp_18"
             android:textColor="@color/black_333333"
-            android:text="最近直播"
+            android:text="近期开始"
             android:layout_marginLeft="@dimen/dp_13"
             android:layout_marginTop="16dp"
-            android:layout_marginBottom="32dp"/>
+            android:layout_marginBottom="16dp"
+            android:visibility="gone"/>
         <TextView
             android:id="@+id/tv_time"
             android:layout_width="wrap_content"
@@ -27,7 +29,8 @@
             android:text="2018-12-02"
             android:layout_toRightOf="@+id/tv_start"
             android:layout_marginLeft="5dp"
-            android:layout_alignBottom="@+id/tv_start"/>
+            android:layout_alignBottom="@+id/tv_start"
+            android:visibility="gone"/>
     </RelativeLayout>
     <RelativeLayout
         android:layout_width="match_parent"
@@ -39,7 +42,8 @@
             android:textSize="@dimen/sp_16"
             android:textColor="@color/black_333333"
             android:text="12052号切石直播"
-            android:layout_marginLeft="@dimen/dp_13"/>
+            android:layout_marginLeft="@dimen/dp_13"
+            android:layout_marginTop="@dimen/dp_15"/>
         <TextView
             android:id="@+id/tv_time_zhibo"
             android:layout_width="wrap_content"
