--- a/app/src/main/res/layout/activity_order_detail.xml
+++ b/app/src/main/res/layout/activity_order_detail.xml
@@ -95,10 +95,12 @@
                 android:layout_width="wrap_content"
                 android:layout_height="38dp"
                 android:text="订单信息"
-                android:textColor="@color/black_333333"
-                android:textSize="@dimen/sp_15"
+                android:textColor="@color/black_000000"
+                android:textSize="@dimen/sp_17"
                 android:gravity="center"
-                android:layout_marginLeft="26dp"/>
+                android:layout_marginLeft="26dp"
+                android:textStyle="bold"
+                />
             <View
                 style="@style/LineGray"
                 android:layout_marginLeft="@dimen/dp_13"
@@ -109,7 +111,7 @@
                     android:layout_width="wrap_content"
                     android:layout_height="38dp"
                     android:text="创建时间"
-                    android:textColor="@color/black_333333"
+                    android:textColor="@color/black_444444"
                     android:textSize="@dimen/sp_13"
                     android:gravity="center"
                     android:layout_marginLeft="26dp"/>
@@ -123,7 +125,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="38dp"
                 android:text="产品编号"
-                android:textColor="@color/black_333333"
+                android:textColor="@color/black_444444"
                 android:textSize="@dimen/sp_13"
                 android:gravity="center"
                 android:layout_marginLeft="26dp"/>
@@ -137,7 +139,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="38dp"
                 android:text="订单号"
-                android:textColor="@color/black_333333"
+                android:textColor="@color/black_444444"
                 android:textSize="@dimen/sp_13"
                 android:gravity="center"
                 android:layout_marginLeft="26dp"/>
@@ -151,7 +153,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="38dp"
                 android:text="商家名称"
-                android:textColor="@color/black_333333"
+                android:textColor="@color/black_444444"
                 android:textSize="@dimen/sp_13"
                 android:gravity="center"
                 android:layout_marginLeft="26dp"/>
@@ -165,7 +167,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="38dp"
                 android:text="享有政策"
-                android:textColor="@color/black_333333"
+                android:textColor="@color/black_444444"
                 android:textSize="@dimen/sp_13"
                 android:gravity="center"
                 android:layout_marginLeft="26dp"/>
@@ -179,7 +181,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="38dp"
                 android:text="付款方式"
-                android:textColor="@color/black_333333"
+                android:textColor="@color/black_444444"
                 android:textSize="@dimen/sp_13"
                 android:gravity="center"
                 android:layout_marginLeft="26dp"/>
@@ -192,10 +194,11 @@
                 android:layout_width="wrap_content"
                 android:layout_height="38dp"
                 android:text="收货信息"
-                android:textColor="@color/black_333333"
-                android:textSize="@dimen/sp_15"
+                android:textColor="@color/black_000000"
+                android:textSize="@dimen/sp_17"
                 android:gravity="center"
-                android:layout_marginLeft="26dp"/>
+                android:layout_marginLeft="26dp"
+                android:textStyle="bold"/>
             <View
                 style="@style/LineGray"
                 android:layout_marginLeft="@dimen/dp_13"
@@ -206,7 +209,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="38dp"
                 android:text="收件人"
-                android:textColor="@color/black_333333"
+                android:textColor="@color/black_444444"
                 android:textSize="@dimen/sp_13"
                 android:gravity="center"
                 android:layout_marginLeft="26dp"/>
@@ -220,7 +223,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="38dp"
                 android:text="联系电话"
-                android:textColor="@color/black_333333"
+                android:textColor="@color/black_444444"
                 android:textSize="@dimen/sp_13"
                 android:gravity="center"
                 android:layout_marginLeft="26dp"/>
@@ -234,7 +237,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="38dp"
                 android:text="收件地址"
-                android:textColor="@color/black_333333"
+                android:textColor="@color/black_444444"
                 android:textSize="@dimen/sp_13"
                 android:gravity="center"
                 android:layout_marginLeft="26dp"/>
@@ -252,7 +255,7 @@
                     android:layout_width="wrap_content"
                     android:layout_height="50dp"
                     android:text="物流信息"
-                    android:textColor="@color/black_333333"
+                    android:textColor="@color/black_444444"
                     android:textSize="@dimen/sp_15"
                     android:gravity="center"
                     android:layout_marginLeft="26dp"/>
@@ -265,7 +268,7 @@
                     android:layout_width="wrap_content"
                     android:layout_height="38dp"
                     android:text="物流单号"
-                    android:textColor="@color/black_333333"
+                    android:textColor="@color/black_444444"
                     android:textSize="@dimen/sp_13"
                     android:gravity="center"
                     android:layout_marginLeft="26dp"/>
@@ -278,7 +281,7 @@
                     android:layout_width="wrap_content"
                     android:layout_height="38dp"
                     android:text="物流服务商"
-                    android:textColor="@color/black_333333"
+                    android:textColor="@color/black_444444"
                     android:textSize="@dimen/sp_13"
                     android:gravity="center"
                     android:layout_marginLeft="26dp"/>
