--- a/app/src/main/res/layout/activity_intergration_push.xml
+++ b/app/src/main/res/layout/activity_intergration_push.xml
@@ -58,7 +58,7 @@
                     android:layout_marginTop="@dimen/dp_15"
                     android:background="@null"
                     android:hint="请输入对方账号"
-                    android:textColor="#BBBBBB"
+                    android:textColor="@color/black_333333"
                     android:textColorHint="#BBBBBB"
                     android:textSize="@dimen/sp_15" />
 
@@ -84,7 +84,7 @@
                     android:layout_marginLeft="@dimen/dp_13"
                     android:layout_marginTop="@dimen/dp_15"
                     android:hint="可用积分为10000"
-                    android:textColor="#BBBBBB"
+                    android:textColor="@color/black_333333"
                     android:textColorHint="#BBBBBB"
                     android:textSize="@dimen/sp_15"
                     android:background="@null"/>
