--- a/app/src/main/res/layout/activity_result_goods.xml
+++ b/app/src/main/res/layout/activity_result_goods.xml
@@ -2,10 +2,10 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
-    android:layout_height="wrap_content"
+    android:layout_height="match_parent"
     android:background="@color/white_default"
     android:orientation="vertical">
-    <include layout="@layout/item_loading"
+     <include layout="@layout/item_loading"
         android:id="@+id/loading" />
     <ImageView
         android:id="@+id/iv_back"
@@ -13,6 +13,17 @@
         android:layout_height="wrap_content"
         android:src="@drawable/global_btn_return"
         android:padding="16dp"/>
+
+    <TextView
+        android:id="@+id/tv_tishi"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:text="暂无数据"
+        android:textSize="@dimen/sp_17"
+        android:textColor="@color/black_666666"
+        android:visibility="gone"
+        android:gravity="center"/>
+
     <android.support.v4.widget.NestedScrollView
         android:layout_width="match_parent"
         android:layout_height="match_parent">
