--- a/app/src/main/res/layout/item_emeralds.xml
+++ b/app/src/main/res/layout/item_emeralds.xml
@@ -11,16 +11,18 @@
         android:layout_height="wrap_content"
         app:cardCornerRadius="5dp"
         android:layout_marginRight="10dp"
-        android:layout_marginLeft="10dp">
+        android:layout_marginLeft="10dp"
+        android:layout_marginBottom="2dp">
         <LinearLayout
-            android:layout_width="wrap_content"
+            android:layout_width="140dp"
             android:layout_height="wrap_content"
             android:orientation="vertical">
             <ImageView
                 android:id="@+id/iv_head"
-                android:layout_width="140dp"
+                android:layout_width="match_parent"
                 android:layout_height="110dp"
-                android:scaleType="fitXY"/>
+                android:scaleType="fitXY"
+                android:src="@drawable/ic_img_default"/>
         <TextView
             android:id="@+id/tv_goodsName"
             android:layout_width="match_parent"
