--- a/app/src/main/res/layout/view_input_pay_psw_dialog.xml
+++ b/app/src/main/res/layout/view_input_pay_psw_dialog.xml
@@ -14,20 +14,49 @@
 
         <RelativeLayout
             android:layout_width="match_parent"
-            android:layout_height="wrap_content">
+            android:layout_height="50dp">
         <TextView
-            android:layout_marginTop="20dp"
             android:layout_centerHorizontal="true"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginBottom="20dp"
             android:text="请输入支付密码"
-            android:textColor="@color/black_333333"
+            android:textColor="@color/black_666666"
+            android:layout_centerVertical="true"
             android:textSize="@dimen/sp_17"/>
+            <TextView
+                android:id="@+id/bt_quxiao"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginLeft="@dimen/dp_15"
+                android:text="X"
+                android:layout_centerVertical="true"
+                android:textColor="@color/black_666666"
+                android:textSize="@dimen/sp_17"/>
+            <View
+                style="@style/LineGray"
+                android:layout_alignParentBottom="true"/>
         </RelativeLayout>
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="金额"
+            android:textSize="@dimen/sp_15"
+            android:layout_marginTop="5dp"
+            android:textColor="@color/black_666666"/>
+        <TextView
+            android:id="@+id/tv_price"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="13"
+            android:textSize="35sp"
+            android:textColor="@color/black_333333"
+            android:layout_marginTop="5dp"/>
 
         <com.microple.jademall.weight.PwdEditText
             android:id="@+id/psw_view"
+            android:layout_marginTop="20dp"
+            android:layout_marginBottom="20dp"
             android:layout_width="match_parent"
             android:layout_marginRight="15dp"
             android:layout_marginLeft="15dp"
@@ -35,55 +64,6 @@
             android:background="#00000000"
             android:maxLength="6"
             android:inputType="number"/>
-        <RelativeLayout
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content">
-            <TextView
-                android:id="@+id/tv_forget_pwd"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:textColor="@color/black_333333"
-                android:textSize="15sp"
-                android:layout_marginTop="10dp"
-                android:layout_marginRight="20dp"
-                android:layout_alignParentRight="true"
-                android:text="忘记密码"/>
-        </RelativeLayout>
-        <View
-            android:layout_width="match_parent"
-            android:layout_height="0.5dp"
-            android:background="@color/gray_EFEFF4"
-            android:layout_marginTop="10dp"/>
-        <LinearLayout
-            android:layout_width="match_parent"
-            android:layout_height="50dp"
-            android:orientation="horizontal">
-            <Button
-                android:id="@+id/bt_quxiao"
-                android:layout_width="0dp"
-                android:layout_height="match_parent"
-                android:layout_weight="1"
-                android:text="取消"
-                android:textSize="@dimen/sp_17"
-                android:textColor="@color/green_06A366"
-                android:background="@null"
-                android:gravity="center"/>
-            <View
-                android:layout_width="0.5dp"
-                android:layout_height="match_parent"
-                android:background="@color/gray_EFEFF4" />
-
-            <Button
-                android:id="@+id/bt_sure"
-                android:layout_width="0dp"
-                android:layout_height="match_parent"
-                android:layout_weight="1"
-                android:text="确定"
-                android:textSize="@dimen/sp_17"
-                android:textColor="@color/green_06A366"
-                android:background="@null"
-                android:gravity="center"/>
-        </LinearLayout>
 
 
     </LinearLayout>
