--- a/app/src/main/res/layout/activity_intergration_push.xml
+++ b/app/src/main/res/layout/activity_intergration_push.xml
@@ -87,7 +87,8 @@
                     android:textColor="@color/black_333333"
                     android:textColorHint="#BBBBBB"
                     android:textSize="@dimen/sp_15"
-                    android:background="@null"/>
+                    android:background="@null"
+                    android:inputType="numberDecimal"/>
 
                 <View
                     style="@style/LineGray"
