--- a/app/src/main/res/layout/fragment_shoppingcar.xml
+++ b/app/src/main/res/layout/fragment_shoppingcar.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@color/white_default"
@@ -27,8 +28,9 @@
             android:text="购物袋"
             android:textColor="@color/black_000000"
             android:layout_marginLeft="@dimen/dp_12"
-            android:textSize="@dimen/sp_24"
+            android:textSize="26dp"
             android:layout_marginRight="14dp"
+            android:textStyle="bold"
             />
 
         <TextView
@@ -67,14 +69,23 @@
         android:layout_marginBottom="21dp"
         android:layout_marginTop="21dp"
         android:layout_below="@+id/tv_content"/>
-            <android.support.v7.widget.RecyclerView
+            <android.support.v7.widget.CardView
                 android:layout_below="@+id/tv_index"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:background="@color/white_default"
+                app:cardCornerRadius="15dp"
+                app:cardUseCompatPadding="true"
+                android:descendantFocusability="blocksDescendants"
+                android:layout_margin="@dimen/dp_13">
+            <android.support.v7.widget.RecyclerView
                 android:id="@+id/cl_right"
                 android:layout_marginLeft="@dimen/dp_13"
                 android:layout_marginRight="@dimen/dp_13"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent">
             </android.support.v7.widget.RecyclerView>
+            </android.support.v7.widget.CardView>>
         </RelativeLayout>
     </android.support.v4.widget.NestedScrollView>
     <RelativeLayout
