--- a/app/src/main/res/drawable/bg_jifen.xml
+++ b/app/src/main/res/drawable/bg_jifen.xml
@@ -1,5 +1,5 @@
 <shape xmlns:android="http://schemas.android.com/apk/res/android" android:shape="rectangle">
-    <solid android:color="#FF9500" />
+    <solid android:color="@color/green_06A366" />
     <corners android:radius="4dp"/>
     <padding android:left="3dp" android:right="3dp"
         android:top="2dp"
