--- a/app/src/main/res/layout/activity_im_order.xml
+++ b/app/src/main/res/layout/activity_im_order.xml
@@ -44,12 +44,21 @@
                     android:layout_alignParentRight="true"
                     android:layout_centerVertical="true"/>
             </RelativeLayout>
+            <android.support.v7.widget.CardView
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:background="@color/white_default"
+                app:cardCornerRadius="15dp"
+                app:cardUseCompatPadding="true"
+                android:descendantFocusability="blocksDescendants"
+                android:layout_margin="@dimen/dp_13">
             <android.support.v7.widget.RecyclerView
                 android:id="@+id/rv_myOrder"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_marginLeft="@dimen/dp_13"
                 android:layout_marginRight="@dimen/dp_13"/>
+            </android.support.v7.widget.CardView>
             <TextView
                 android:id="@+id/tv_youji"
                 android:layout_width="wrap_content"
