--- a/app/src/main/res/layout/activity_order_detail.xml
+++ b/app/src/main/res/layout/activity_order_detail.xml
@@ -45,8 +45,8 @@
                 android:id="@+id/iv_goodsImage"
                 android:layout_marginLeft="15dp"
                 android:layout_marginTop="@dimen/dp_10"
-                android:layout_width="113dp"
-                android:layout_height="84dp"
+                android:layout_width="90dp"
+                android:layout_height="90dp"
                 android:src="@drawable/ic_img_default"
                 android:scaleType="fitXY" />
             <LinearLayout
@@ -255,7 +255,8 @@
                     android:layout_width="wrap_content"
                     android:layout_height="50dp"
                     android:text="物流信息"
-                    android:textColor="@color/black_444444"
+                    android:textColor="@color/black_333333"
+                    android:textStyle="bold"
                     android:textSize="@dimen/sp_15"
                     android:gravity="center"
                     android:layout_marginLeft="26dp"/>
