--- a/app/src/main/res/layout/activity_orderdetail_two.xml
+++ b/app/src/main/res/layout/activity_orderdetail_two.xml
@@ -30,19 +30,25 @@
     <RelativeLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content">
+        <android.support.v7.widget.CardView
+            android:id="@+id/ic_goodsImages"
+            android:layout_width="wrap_content"
+            android:layout_height="90dp"
+            app:cardCornerRadius="5dp"
+            android:layout_marginLeft="15dp"
+            android:layout_marginTop="@dimen/dp_10">
         <ImageView
             android:id="@+id/iv_goodsImage"
-            android:layout_marginLeft="15dp"
-            android:layout_marginTop="@dimen/dp_10"
-            android:layout_width="113dp"
-            android:layout_height="84dp"
+            android:layout_width="90dp"
+            android:layout_height="90dp"
             android:src="@drawable/ic_img_default"
             android:scaleType="fitXY" />
+        </android.support.v7.widget.CardView>
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginLeft="15dp"
-            android:layout_toRightOf="@+id/iv_goodsImage"
+            android:layout_toRightOf="@+id/ic_goodsImages"
             android:layout_marginTop="@dimen/dp_10"
             android:orientation="vertical">
             <TextView
@@ -76,7 +82,7 @@
             android:layout_width="match_parent"
             android:layout_height="0.5dp"
             android:background="@color/line_C8C7CC"
-            android:layout_below="@+id/iv_goodsImage"
+            android:layout_below="@+id/ic_goodsImages"
             android:layout_marginTop="10dp"/>
     </RelativeLayout>
     </android.support.v7.widget.CardView>
