--- a/app/src/main/res/layout/fragment_allorder.xml
+++ b/app/src/main/res/layout/fragment_allorder.xml
@@ -18,13 +18,18 @@
                     android:textColor="@color/black_666666"
                     android:visibility="gone"
                     android:gravity="center"/>
+                <android.support.v4.widget.SwipeRefreshLayout
+                    android:id="@+id/sr_swipe"
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent">
+
                 <android.support.v7.widget.RecyclerView
                     android:id="@+id/recyclerView"
                     android:layout_width="match_parent"
                     android:layout_height="match_parent"
                     android:layout_marginLeft="@dimen/dp_13"
-                    android:layout_marginRight="@dimen/dp_13"
-                    />
+                    android:layout_marginRight="@dimen/dp_13"/>
+                </android.support.v4.widget.SwipeRefreshLayout>
 
             </RelativeLayout>
 
