--- a/app/src/main/res/layout/fragment_common.xml
+++ b/app/src/main/res/layout/fragment_common.xml
@@ -9,8 +9,9 @@
         android:layout_height="160dp"
         android:layout_gravity="center"
         app:cardCornerRadius="10dp"
-        app:cardElevation="6dp"
-        app:cardMaxElevation="6dp"
+        android:paddingTop="4dp"
+        android:paddingBottom="4dp"
+        app:cardUseCompatPadding="true"
         >
         <ImageView
             android:id="@+id/iv_banner"
