--- a/app/src/main/res/layout/fragment_live.xml
+++ b/app/src/main/res/layout/fragment_live.xml
@@ -27,7 +27,8 @@
                 android:layout_marginTop="6dp"
                 android:text="直播"
                 android:textColor="@color/text_black"
-                android:textSize="@dimen/sp_24" />
+                android:textStyle="bold"
+                android:textSize="26dp" />
             <android.support.v7.widget.RecyclerView
                 android:id="@+id/rv_yuyueLive"
                 android:layout_width="match_parent"
