--- a/app/src/main/res/layout/fragment_personl.xml
+++ b/app/src/main/res/layout/fragment_personl.xml
@@ -51,7 +51,8 @@
                     android:layout_marginTop="6dp"
                     android:text="个人中心"
                     android:textColor="@color/text_black"
-                    android:textSize="@dimen/sp_24" />
+                    android:textStyle="bold"
+                    android:textSize="26dp" />
 
                 <RelativeLayout
                     android:layout_width="match_parent"
