--- a/app/src/main/res/layout/item_logistical.xml
+++ b/app/src/main/res/layout/item_logistical.xml
@@ -1,7 +1,9 @@
 <?xml version="1.0" encoding="utf-8"?>
-<android.support.constraint.ConstraintLayout
-    xmlns:android="http://schemas.android.com/apk/res/android" android:layout_width="match_parent"
-    android:layout_height="match_parent">
+<LinearLayout
+    xmlns:android="http://schemas.android.com/apk/res/android"
+    android:layout_width="wrap_content"
+    android:layout_height="wrap_content"
+    android:orientation="vertical">
     <TextView
         android:id="@+id/tv_content"
         android:layout_width="match_parent"
@@ -13,5 +15,10 @@
         android:textColor="@color/black_333333"
         android:layout_marginTop="11dp"
         android:layout_marginBottom="11dp"/>
+    <View
+        style="@style/LineGray"
+        android:layout_marginLeft="@dimen/dp_13"
+        android:layout_marginRight="@dimen/dp_13"
+        />
 
-</android.support.constraint.ConstraintLayout>
+</LinearLayout>
